# lizard

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: debug.hpp  main.cpp
src/builtins/io/: show.cpp  show.hpp
src/core/: ast.hpp  environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp  value.hpp
src/error/: error.cpp  error.hpp
test/stage0/: hello.lz  test_arith.lz  test_array.lz  test_bitwise.lz  test_cmp.lz  test_compound.lz  test_format_strings.lz  test_if.lz  test_immutable_error.lz  test_object.lz  test_semicolon_stmt.lz  test_strings.lz  test_ternary.lz  test_undefined_error.lz  test_uninitialized_var.lz  test_uninitialized_var_error.lz  test_variable_type.lz  test_vars.lz
